--- a/html/template.html
+++ b/html/template.html
@@ -24,7 +24,11 @@
 
             canvas {
                 border: 2px solid #444;
-                background-color: #000;
+                background-color: transparent;
+                width: 80vw;
+                height: 80vh;
+                max-width: 1080px;
+                max-height: 720px;
             }
 
             #status {
