--- a/html/template.html
+++ b/html/template.html
@@ -5,66 +5,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Fluid Simulation</title>
-        <style>
-            body {
-                font-family: Arial, sans-serif;
-                background-color: #000;
-                margin: 0;
-                padding: 0;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                height: 100vh;
-                overflow: hidden;
-            }
-
-            .container {
-                text-align: center;
-            }
-
-            canvas {
-                border: 2px solid #444;
-                background-color: transparent;
-                width: 80vw;
-                height: 80vh;
-                max-width: 1080px;
-                max-height: 720px;
-            }
-
-            #status {
-                margin-top: 20px;
-                color: #555;
-            }
-        </style>
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
         <div class="container">
             <canvas id="canvas" class="emscripten"></canvas>
             <div id="status">Carregando...</div>
         </div>
-
-        <script>
-            var Module = {
-                preRun: [],
-                postRun: [],
-                print: (...args) => {
-                    const text = args.join(" ");
-                    console.log(text);
-                },
-                canvas: document.getElementById("canvas"),
-                setStatus: (text) => {
-                    const statusElement = document.getElementById("status");
-                    if (statusElement) {
-                        statusElement.innerHTML = text;
-                    }
-                },
-                monitorRunDependencies: (left) => {
-                    Module.setStatus(
-                        left ? `Carregando... (${left})` : "Pronto"
-                    );
-                },
-            };
-        </script>
+        <script src="script.js"></script>
         {{{ SCRIPT }}}
     </body>
 </html>
