Site ta com o fundo mais bonito

--- a/html/template.html
+++ b/html/template.html
@@ -9,6 +9,8 @@
     </head>
     <body>
         <div class="container">
+            <div class="stars"></div>
+
             <canvas id="canvas" class="emscripten"></canvas>
             <div id="status">Carregando...</div>
         </div>
