--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     </head>
     <body>
         <div class="container">
+            <div class="stars"></div>
+
             <canvas id="canvas" class="emscripten"></canvas>
             <div id="status">Carregando...</div>
         </div>
